--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "element-ui": "^1.3.7",
     "mqtt": "^2.9.0",
     "vue": "^2.3.3"
